[gd_scene load_steps=4 format=3 uid="uid://c1yl1xrrogdko"]

[ext_resource type="Script" path="res://src/UI/ScrollLevels.gd" id="1_73uwu"]
[ext_resource type="Theme" uid="uid://cnfd7471im5h6" path="res://src/UI/Game_theme.tres" id="1_q2als"]
[ext_resource type="Texture2D" uid="uid://p8kpp5xpvp07" path="res://Assets/Textures/UI/Languages/Language_setting_button.PNG" id="2_osfb7"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2als")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2als")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -78.0001
offset_right = 1160.0
offset_bottom = 703.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.1, 0.1)
theme = ExtResource("1_q2als")
icon = ExtResource("2_osfb7")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -957.0
offset_top = -326.0
offset_right = 966.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel" node_paths=PackedStringArray("timer", "h_box_cont")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -259.0
offset_right = -4.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
script = ExtResource("1_73uwu")
timer = NodePath("../../../Timer")
h_box_cont = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Panel/Button" to="Panel/Panel/ScrollContainer" method="_on_button_pressed"]
[connection signal="mouse_entered" from="Panel/Panel/ScrollContainer" to="Panel/Panel/ScrollContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Panel/ScrollContainer" to="Panel/Panel/ScrollContainer" method="_on_mouse_exited"]
